# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import emailRouter from "./email";
+import applicationsRouter from "./applications";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(emailRouter);
+router.use(applicationsRouter);
 
 export default router;
